# FastAPI-Demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  compose.yaml  docker-bake.hcl  prometheus.yml  pyproject.toml
.github/workflows/: ci-cd.yaml
app/: main.py
app/api/: schemas.py  v1.py
app/core/: config.py  logging_conf.py
